--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,8 +3,9 @@ FROM node:18-alpine as build
 WORKDIR /app
 
 COPY package.json ./
+COPY package-lock.json ./
 
-RUN npm install 
+RUN npm ci --omit=dev
 
 COPY . .
 
