--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,6 @@
     "build": "tsup",
     "format": "prettier --config .prettierrc --write ."
   },
-  "engines": {
-    "node": "20.12.2"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -39,5 +36,8 @@
     "prettier": "3.2.5",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
