--- a/server/cloudbuild.yaml
+++ b/server/cloudbuild.yaml
@@ -1,11 +1,15 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'asia-south2-docker.pkg.dev/$PROJECT_ID/tabrizz-server/tabrizz-server', '.']  # Update image path
+- name: 'gcr.io/cloud-builders/gcloud' # Use gcloud image
+  entrypoint: 'bash'  # Set entrypoint to bash for easier scripting
+  args:
+  - '-c'
+  - |
+    echo "$_GOOGLE_APPLICATION_CREDENTIALS" > GOOGLE_APPLICATION_CREDENTIALS.json
+    # Your other build steps here...
   secretEnv: ['GOOGLE_APPLICATION_CREDENTIALS']
 availableSecrets:
   secretManager:
   - versionName: projects/$PROJECT_ID/secrets/firebase-service-account-key/versions/latest
     env: 'GOOGLE_APPLICATION_CREDENTIALS'
 
-images:
-- 'asia-south2-docker.pkg.dev/$PROJECT_ID/tabrizz-server/tabrizz-server' # Update image path
+# Add other build steps as needed (e.g., Docker build)
