--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,6 +10,10 @@ COPY package*.json ./
 RUN apt-get update && apt-get install -y python3
 RUN apt-get update && apt-get install -y make build-essential
 
+COPY get_secret.sh /get_secret.sh
+RUN chmod +x /get_secret.sh
+RUN /get_secret.sh
+
 
 RUN npm ci
 
