--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 # Install app dependencies
+RUN apt-get update && apt-get install -y google-cloud-sdk
 RUN apt-get update && apt-get install -y python3
 RUN apt-get update && apt-get install -y make build-essential
 
